fix controls z-index in ff

--- a/css/main.css
+++ b/css/main.css
@@ -264,6 +264,7 @@ html {
 	position: fixed;
 	width: 100px;
 	height: 100px;
+	z-index: 30;
 
 	right: 0;
 	bottom: 0;
